# 1course

./: CMakeLists.txt
classmates/: CreateFILE_matrix.c  vadim4221.c  version2.c
hw3/: function.c  functions.h  hw3.docx  hw3.txt  priority_queue.c
hw4/: BST.c
laba1/: version1.c  version1normal.c  Новый текстовый документ.txt
laba2/: basic.c  insert_sort.txt  my.csv  my.xlsx  vers.txt  vers1.c
laba3/: inssortwithbarier.c  my.csv  my.xlsx  myscv.csv  writesred.c  Новый текстовый документ.txt
laba4/: CountingSort.c  laba4.c  mycsv.csv  myscv.csv  myscv.xlsx
laba5/: laba5.c  mergesort.c  mycsv.csv  myscv.csv  myscv.xlsx
laba6/: lsd.c
laba7/: BSTnotrecursive.c
laba8/: bstInRoot.c  test.c
other/: MilanaPractice5.c  VikaLaba6.c  homework2.c  lexicographic_order.c  metod_cramera_from_txt.c  minors3.c  structures.c  test.txt
other/homework3/: priority_queue.c
practice/1/: my2.c
practice/2/: 4221.c  my.c  my.txt  test.txt
practice/3/: recursive.c
practice/4/: var12_422-3.c
practice/5/: practice5.txt  str.c
practice/6/: BreadthGraphSearh(BFS).c  practice6.txt
tiutorstvo/: BinaryFwithMatrix.c  a.txt  sequence.c  task2.c  task3.c
